--- a/.github/workflows/bonus-alert.yml
+++ b/.github/workflows/bonus-alert.yml
@@ -13,6 +13,6 @@ jobs:
           python-version: '3.x'
       - run: pip install requests beautifulsoup4 python-telegram-bot==13.15
       - env:
-          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
-        run: python bonus_alert_bot.py
+         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+         TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
+         run: python $GITHUB_WORKSPACE/bonus_alert_bot.py
