--- a/.github/workflows/bonus-alert.yml
+++ b/.github/workflows/bonus-alert.yml
@@ -14,7 +14,8 @@ jobs:
       - run: pip install requests beautifulsoup4 python-telegram-bot==13.15
       - name: Run bonus alert bot
         run: python bonus_alert_bot.py
-        env:
-         TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-         TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
+      - env:
+          TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+          TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: python bonus_alert_bot.py
         working-directory: ${{ github.workspace }}
