--- a/.github/workflows/bonus-alert.yml
+++ b/.github/workflows/bonus-alert.yml
@@ -1,8 +1,10 @@
 name: bonus-alert
+
 on:
   schedule:
-    - cron: '0 * * * *'    # HH:00 UTC
+    - cron: '0 * * * *' # Every hour at HH:00 UTC
   workflow_dispatch:
+
 jobs:
   scan:
     runs-on: ubuntu-latest
@@ -11,11 +13,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-      - run: pip install requests beautifulsoup4 python-telegram-bot==13.15
+      - run: pip install requests beautifulsoup4
       - name: Run bonus alert bot
-        run: python bonus_alert_bot.py
-      - env:
+        env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python bonus_alert_bot.py
         working-directory: ${{ github.workspace }}
