--- a/.github/workflows/bonus-alert.yml
+++ b/.github/workflows/bonus-alert.yml
@@ -1,29 +1,22 @@
 name: bonus-alert
 
 on:
-  workflow_dispatch:
   schedule:
-    - cron: '0 * * * *'  # runs every hour (customize as needed)
-
+    # meio-dia UTC-3  →  15:00 UTC
+    - cron: '0 15 * * *'
+    # 20:00 UTC-3     →  23:00 UTC
+    - cron: '0 23 * * *'
+  workflow_dispatch:   # para rodar manualmente quando quiser
 jobs:
-  run-bonus-alert:
+  scan:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 feedparser python-telegram-bot
-
-      - name: Run Bonus Alert Bot
-        env:
+      - run: pip install requests beautifulsoup4 feedparser python-telegram-bot
+      - env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_CHAT_ID:   ${{ secrets.TELEGRAM_CHAT_ID }}
         run: python bonus_alert_bot.py
