--- a/.github/workflows/bonus-alert.yml
+++ b/.github/workflows/bonus-alert.yml
@@ -2,10 +2,15 @@ name: bonus-alert
 
 on:
   schedule:
+    - cron: '0 */2 * * *'   # → 00:00, 02:00, 04:00 … UTC
+
+#on:
+ # schedule:
     # meio-dia UTC-3  →  15:00 UTC
-    - cron: '0 15 * * *'
+  #  - cron: '0 15 * * *'
     # 20:00 UTC-3     →  23:00 UTC
-    - cron: '0 23 * * *'
+   # - cron: '0 23 * * *'
+   
   workflow_dispatch:   # para rodar manualmente quando quiser
 jobs:
   scan:
