--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,12 @@ dependencies = [
     "requests",
     "beautifulsoup4",
     "feedparser",
-    "python-telegram-bot==22.1",
+    "python-telegram-bot>=21.0",
+    "APScheduler>=3.10",
+    "redis>=5.0",
+    "PyYAML",
+    "types-requests",
+    "types-PyYAML",
 ]
 
 [project.optional-dependencies]
