--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ dev = [
     "mypy",
     "openai>=0.27,<1.0",
     "pdfplumber",
+    "types-PyYAML>=6.0.12",
+    "types-requests>=2.31.0.20240406",
 ]
 
 [tool.setuptools.packages.find]
