fix formatting and ensure mypy hook works

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,6 +13,11 @@ repos:
     hooks:
       - id: mypy
         args: ["--strict", "miles"]
+        pass_filenames: false
+        additional_dependencies:
+          - types-requests
+          - types-PyYAML
+          - types-redis
   - repo: local
     hooks:
       - id: pytest
