--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,11 +24,10 @@ jobs:
       - run: ruff check .
       - run: black --check .
       - run: mypy --strict miles/
-      - run: pytest -q
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install matplotlib pytest
+          pip install -r requirements.txt
       - name: Set image tag (lower-case repo)
         id: prep
         run: |
