--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: build
 on:
   push:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -19,7 +20,7 @@ jobs:
       - run: pip install -e .
       - run: |
           # install stub packages for mypy strict mode
-          pip install types-PyYAML types-requests openai types-openai
+          pip install types-PyYAML types-requests openai
       - run: pip install ruff black mypy pytest
       - run: ruff check .
       - run: black --check .
