--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: "Install Fly CLI"
+        run: |
+          curl -L https://fly.io/install.sh | sh
+          export PATH=$PATH:$HOME/.fly/bin # Add Fly CLI to PATH
       - name: "Push secrets to Fly"
         run: |
           fly secrets set \
