--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -15,7 +15,7 @@ jobs:
       - name: "Install Fly CLI"
         run: |
           curl -L https://fly.io/install.sh | sh
-          echo 'export PATH=$PATH:$HOME/.fly/bin' >> $GITHUB_ENV # Persist Fly CLI path
+          echo "$HOME/.fly/bin" >> $GITHUB_PATH
       - name: "Push secrets to Fly"
         run: |
           fly secrets set \
