--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,15 @@
-app = "miles"
-primary_region = "iad"
+# fly.toml app configuration file generated for miles-redis on 2025-06-07T09:27:44Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'miles-redis'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile"
+  image = 'redis:7'
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
