--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev = [
     "types-PyYAML>=6.0.12",
     "types-requests>=2.31.0.20240406",
     "matplotlib",
+    "fakeredis>=2.0",
 ]
 
 [project.scripts]
