--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,9 @@
 [mypy]
 strict = True
 ignore_missing_imports = True
+
+[mypy-miles.source_store]
+disable_error_code = type-arg,arg-type
+
+[mypy-miles.chat_store]
+disable_error_code = type-arg
