--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: aquasecurity/trivy-action@v0.31.0
+      - uses: aquasecurity/trivy-action@0.30.0
         with:
           scan-type: fs
           ignore-unfixed: true
