Fix Fly.io deployment issues
- Add curl to Dockerfile for health checks
- Move environment variable validation from import-time to runtime
- Fix OpenAI client initialization with proper error handling
- Add comprehensive startup logging and diagnostics
- Update fly.toml with proper HTTP service and health check config
- Improve error handling for scheduler and component initialization

This resolves application crashes during Fly.io smoke checks by ensuring:
1. Health endpoint is accessible with curl dependency
2. App can start even with missing env vars (fails gracefully)
3. Detailed logging helps diagnose deployment issues
4. Proper health check configuration in Fly.io

--- a/fly.toml
+++ b/fly.toml
@@ -12,6 +12,19 @@ primary_region = 'iad'
 [env]
   PYTHONUNBUFFERED = '1'
 
+[http_service]
+  internal_port = 8080
+  force_https = false
+
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  path = "/"
+  port = 8080
+  protocol = "http"
+  timeout = "5s"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
