Make deployment more robust with graceful env var handling
- Split environment variables into required vs optional categories
- Only require TELEGRAM_BOT_TOKEN and TELEGRAM_CHAT_ID for basic functionality
- Handle missing OPENAI_API_KEY gracefully (disables /chat command)
- Handle missing REDIS_URL gracefully (falls back to file storage)
- Add default values in deployment workflow for optional secrets
- Improve error messages and feature availability warnings
- Update storage components to handle 'not_set' placeholder values

This allows the app to start successfully even when some secrets are missing,
with degraded functionality rather than complete failure.

--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -19,11 +19,11 @@ jobs:
       - name: "Push secrets to Fly"
         run: |
           fly secrets set \
-            OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} \
-            TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }} \
-            TELEGRAM_CHAT_ID=${{ secrets.TELEGRAM_CHAT_ID }} \
-            MIN_BONUS=${{ secrets.MIN_BONUS }} \
-            REDIS_URL=${{ secrets.REDIS_URL }}
+            OPENAI_API_KEY="${{ secrets.OPENAI_API_KEY || 'not_set' }}" \
+            TELEGRAM_BOT_TOKEN="${{ secrets.TELEGRAM_BOT_TOKEN }}" \
+            TELEGRAM_CHAT_ID="${{ secrets.TELEGRAM_CHAT_ID }}" \
+            MIN_BONUS="${{ secrets.MIN_BONUS || '80' }}" \
+            REDIS_URL="${{ secrets.REDIS_URL || 'not_set' }}"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - uses: superfly/flyctl-actions@1.5
