Add comprehensive log webhook pipeline
- Create log_receiver.py: FastAPI webhook server on port 5051
- Update CI workflow: Add log forwarding for pytest and mypy steps
- Add scripts/ping_webhook.sh: Test connectivity to webhook
- Update README.md: Complete documentation for log streaming
- Update commands documentation with all new features
- Add fastapi[all] and uvicorn to requirements.txt
- Add received_logs/ to .gitignore

Log pipeline allows real-time CI monitoring and offline analysis.
All logs stored in received_logs/<run_id>.ndjson format.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,26 @@ jobs:
           python-version: '3.12'
       - run: pip install -e .[dev]
       - run: pre-commit run --all-files
-      - run: pytest --cov=miles --cov-report=xml
-      - run: mypy miles
+      - name: Run tests
+        run: pytest --cov=miles --cov-report=xml 2>&1 | tee test_output.log
+      - name: Ship test logs
+        if: env.LOG_WEBHOOK_URL != ''
+        run: |
+          curl -s -X POST "$LOG_WEBHOOK_URL" \
+               -H "Content-Type: application/json" \
+               -d "{\"run_id\":\"${{ github.run_id }}\",\"step\":\"pytest\",\"log\":\"$(cat test_output.log | jq -Rs .)\"}" || true
+        env:
+          LOG_WEBHOOK_URL: ${{ secrets.LOG_WEBHOOK_URL }}
+      - name: Run mypy
+        run: mypy miles 2>&1 | tee mypy_output.log
+      - name: Ship mypy logs
+        if: env.LOG_WEBHOOK_URL != ''
+        run: |
+          curl -s -X POST "$LOG_WEBHOOK_URL" \
+               -H "Content-Type: application/json" \
+               -d "{\"run_id\":\"${{ github.run_id }}\",\"step\":\"mypy\",\"log\":\"$(cat mypy_output.log | jq -Rs .)\"}" || true
+        env:
+          LOG_WEBHOOK_URL: ${{ secrets.LOG_WEBHOOK_URL }}
   trivy:
     runs-on: ubuntu-latest
     steps:
