--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,13 @@ dev = [
     "pytest",
     "pytest-cov",
     "pytest-xdist",
+    "pytest-asyncio",
     "mypy",
     "pre-commit",
     "pdfplumber",
     "types-PyYAML>=6.0.12",
     "types-requests>=2.31.0.20240406",
+    "types-redis",
     "matplotlib",
     "fakeredis>=2.0",
 ]
