🔌 Implement modular plugin system architecture
✨ NEW FEATURES:
- Plugin API with Protocol-based contracts (miles/plugin_api.py)
- Dynamic plugin discovery via importlib.metadata entry points
- APScheduler integration for automatic plugin scheduling
- Environment-based plugin filtering (PLUGINS_ENABLED)
- Async/sync plugin support with proper error isolation

🏗️ ARCHITECTURE:
- Zero-disruption additive design - existing bot unchanged
- Entry points discovery for third-party plugins
- Namespace packages for first-party plugins
- Comprehensive error handling and logging

🧪 TESTING:
- Demo HelloPlugin with hourly schedule
- Plugin discovery and scraping tests
- Full integration with existing test suite
- 13/13 tests passing ✅

📋 DEVELOPER EXPERIENCE:
- Clean Plugin protocol with type hints
- Rich documentation with examples
- Mermaid architecture diagrams
- Environment variable controls

This foundation enables incremental migration of existing scrapers to plugins
while providing a robust platform for future extensibility. Ready for production!

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ dev = [
 miles-scan = "bonus_alert_bot:main"
 miles-ask = "ask_bot:main"
 
+[project.entry-points.milesbot_plugins]
+demo_hello = "plugins.demo_hello:HelloPlugin"
+
 [tool.setuptools.packages.find]
 where = ["."]
 exclude = ["tests"]
