--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,9 @@ dependencies = [
     "requests",
     "beautifulsoup4",
     "feedparser",
-    "python-telegram-bot>=21.0",
+    "python-telegram-bot~=20.8",
     "APScheduler>=3.10",
+    "aiohttp>=3.9",
     "redis>=5.0",
     "PyYAML",
     "openai>=1.27,<2.0",
