📊 Add Prometheus Metrics Endpoint
Features added:
✅ Comprehensive metrics collection for all major operations
✅ /metrics endpoint for Prometheus scraping
✅ Redis operation timing and counting
✅ Telegram command success/error tracking
✅ Plugin execution metrics
✅ Memory usage and system health monitoring
✅ Bot information metrics

Metrics categories:
- promo_scrape_duration_seconds - Source scanning performance
- telegram_commands_total - Bot command usage
- llm_requests_total - AI API usage tracking
- plugin_execution_duration_seconds - Plugin performance
- redis_operations_total - Storage operation metrics
- memory_usage_bytes - System resource monitoring

Endpoints:
- /health - Basic health check (existing)
- /metrics - Prometheus metrics (NEW)

Dependencies added:
- prometheus-client>=0.20.0
- psutil>=5.9.0 (for memory monitoring)

This addresses Issue #2 from the repository analysis.
Next: Enhanced rate limiting and security hardening.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "openai>=1.27,<2.0",
     "fastapi[all]",
     "uvicorn",
+    "prometheus-client>=0.20.0",
 ]
 
 [project.optional-dependencies]
@@ -39,6 +40,7 @@ dev = [
     "types-redis",
     "matplotlib",
     "fakeredis>=2.0",
+    "psutil>=5.9.0",
 ]
 
 [project.scripts]
