--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "fastapi[all]",
     "uvicorn",
     "prometheus-client>=0.20.0",
+    "asyncpg>=0.29.0",
+    "sqlalchemy[asyncio]>=2.0.0",
+    "alembic>=1.13.0",
 ]
 
 [project.optional-dependencies]
