🧪 ADD: New Keploy test-set-1 with 10 recorded API test cases
- Recorded comprehensive API interactions via keploy_api_tests.py
- Captured health check, sources CRUD, scanning, plugins, metrics, notifications
- Total test coverage: 18 test cases across 2 test sets (test-set-0 + test-set-1)
- All tests auto-generated with zero manual test writing required

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,16 @@
 
   // Allow the language server to find packages inside the *src* directory
   // (adjust the relative path if your layout is different).
-  "python.analysis.extraPaths": ["./src"]
+  "python.analysis.extraPaths": [
+    "./src"
+  ],
+  "python.testing.unittestArgs": [
+    "-v",
+    "-s",
+    ".",
+    "-p",
+    "*test.py"
+  ],
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true
 }
