🔧 Fix remaining CI issues for workflow compliance
- Remove unused imports from conversation_manager.py (F401 errors)
- Fix shellcheck issues in GitHub workflows:
  - Add proper quoting for variable expansions
  - Fix codecov action parameter (file → files)
  - Replace useless cat with proper redirections
- All linting and workflow validation should now pass

Resolves final CI failures to complete natural language transformation.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           curl -s -X POST "$LOG_WEBHOOK_URL" \
                -H "Content-Type: application/json" \
-               -d "{\"run_id\":\"${{ github.run_id }}\",\"step\":\"pytest\",\"log\":\"$(cat test_output.log | jq -Rs .)\"}" || true
+               -d "{\"run_id\":\"${{ github.run_id }}\",\"step\":\"pytest\",\"log\":\"$(jq -Rs . < test_output.log)\"}" || true
         env:
           LOG_WEBHOOK_URL: ${{ secrets.LOG_WEBHOOK_URL }}
       - name: Run mypy
@@ -32,7 +32,7 @@ jobs:
         run: |
           curl -s -X POST "$LOG_WEBHOOK_URL" \
                -H "Content-Type: application/json" \
-               -d "{\"run_id\":\"${{ github.run_id }}\",\"step\":\"mypy\",\"log\":\"$(cat mypy_output.log | jq -Rs .)\"}" || true
+               -d "{\"run_id\":\"${{ github.run_id }}\",\"step\":\"mypy\",\"log\":\"$(jq -Rs . < mypy_output.log)\"}" || true
         env:
           LOG_WEBHOOK_URL: ${{ secrets.LOG_WEBHOOK_URL }}
   trivy:
