--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,7 +85,7 @@ jobs:
         if: matrix.python-version == '3.12'
         uses: codecov/codecov-action@v5
         with:
-          file: ./coverage.xml
+          files: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
 
@@ -135,8 +135,8 @@ jobs:
         id: prep
         run: |
           REPO_LOWER=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
-          echo "image=ghcr.io/${{ github.repository_owner }}/$REPO_LOWER:${{ github.sha }}" >> $GITHUB_OUTPUT
-          echo "image-latest=ghcr.io/${{ github.repository_owner }}/$REPO_LOWER:latest" >> $GITHUB_OUTPUT
+          echo "image=ghcr.io/${{ github.repository_owner }}/${REPO_LOWER}:${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "image-latest=ghcr.io/${{ github.repository_owner }}/${REPO_LOWER}:latest" >> $GITHUB_OUTPUT
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -189,8 +189,8 @@ jobs:
         id: prep
         run: |
           REPO_LOWER=$(echo "${{ github.event.repository.name }}" | tr '[:upper:]' '[:lower:]')
-          echo "image=ghcr.io/${{ github.repository_owner }}/$REPO_LOWER:natural-${{ github.sha }}" >> $GITHUB_OUTPUT
-          echo "image-latest=ghcr.io/${{ github.repository_owner }}/$REPO_LOWER:natural-latest" >> $GITHUB_OUTPUT
+          echo "image=ghcr.io/${{ github.repository_owner }}/${REPO_LOWER}:natural-${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "image-latest=ghcr.io/${{ github.repository_owner }}/${REPO_LOWER}:natural-latest" >> $GITHUB_OUTPUT
           
       - name: Build and push Natural Language Docker image
         uses: docker/build-push-action@v6
