--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,13 +6,13 @@ repos:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]  # Auto-fix issues
       - id: ruff-format  # Ruff's built-in formatter
-  
+
   - repo: https://github.com/psf/black
     rev: 24.10.0  # Updated to latest
     hooks:
       - id: black
         args: ["--check", "."]
-  
+
   # 🧪 Layer 2: Static Analysis & Tests
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.13.0  # Updated to latest
@@ -24,7 +24,7 @@ repos:
           - types-requests>=2.31.0.20240406
           - types-PyYAML>=6.0.12
           - types-redis
-  
+
   # 🔧 Layer 3: CI & Workflow Validation
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
@@ -35,15 +35,16 @@ repos:
       - id: check-merge-conflict  # Check for merge conflict markers
       - id: trailing-whitespace  # Remove trailing whitespace
       - id: end-of-file-fixer  # Ensure files end with newline
-  
-  # 🛡️ Security & Quality
+
+  # 🛡️ Security & Quality (run only on push)
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.10
     hooks:
       - id: bandit
-        args: ["-r", "miles", "-ll"]  # Low severity and above
-        exclude: ^tests/
-  
+        args: ["-r", ".", "-i", "--exclude=tests/,test/,node_modules/,.venv/,venv/"]
+        pass_filenames: false
+        stages: [pre-push]
+
   # 🧪 Local Tests (runs last)
   - repo: local
     hooks:
