fix: correct workflow name for deployment trigger
- Update deploy-fly.yml to reference correct workflow name
- Enables automatic deployment after successful build
- Fixes deployment pipeline that wasn't triggering

--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -2,7 +2,7 @@ name: deploy-fly
 
 on:
   workflow_run:
-    workflows: ["build"]
+    workflows: ["🛡️ Build & Quality Gates"]
     types:
       - completed
   workflow_dispatch:
