feat: replace pre-commit with Trunk for superior code quality
🚀 **Major Quality Pipeline Upgrade**

**Trunk Benefits:**
- ✅ 20+ linters/formatters in one tool (Python, YAML, Markdown, Shell, Docker)
- ✅ Auto-formatting and fixing (vs manual pre-commit fixes)
- ✅ Incremental checking (only changed files)
- ✅ Built-in security scanning (bandit, checkov, trufflehog, osv-scanner)
- ✅ Smart caching for 10x faster runs
- ✅ Zero configuration - works out of the box

**What Changed:**
- Initialize Trunk with optimal configuration for Python/Docker/YAML
- Auto-fixed formatting in README.md, BRANCHING_STRATEGY.md, docs/, keploy.yml
- Setup Git hooks for automatic formatting (pre-commit) and checking (pre-push)
- Ignored build artifacts and node_modules for better performance

**Developer Experience:**
- [0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G
[1m[30m[107m  ISSUES  [0m

[1m[4mREADME.md[0m[4m[90m:288:0[0m
 [1m[90m[49m288:0[22m[39m[49m  [33m[49mlow[39m[49m  Fenced code blocks should have a language specified  [1m[90m[49mmarkdownlint/MD040[22m[39m[49m

[1m[4mscripts/set_secrets.sh[0m[4m[90m:22:1[0m
 [1m[90m[49m22:1[22m[39m[49m  [35m[49mmedium[39m[49m  OPTIONAL_SECRETS appears unused. Verify use (or export if used externally).  [1m[90m[49mshellcheck/SC2034[22m[39m[49m

Checked 38 modified files
[90m13 existing issues (use --show-existing to see them)
[0m[1m[91m✖ 2 new lint issues
[0m - Run all quality checks
- [0G[2K[0G[2K[0G[2K[0G[2K[0G
Checked 38 modified files
[1m[92m✔ No issues[0m - Auto-format all code
- [0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[2K[0G[0G

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,24 @@
 repos:
   # 🚀 Layer 1: Formatting & Style (Ultra-fast Rust-based)
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.8.4  # Updated to latest
+    rev: v0.8.4 # Updated to latest
     hooks:
       - id: ruff
-        args: [--fix, --exit-non-zero-on-fix]  # Auto-fix issues
-      - id: ruff-format  # Ruff's built-in formatter
+        args: [--fix, --exit-non-zero-on-fix] # Auto-fix issues
+      - id: ruff-format # Ruff's built-in formatter
 
   - repo: https://github.com/psf/black
-    rev: 24.10.0  # Updated to latest
+    rev: 24.10.0 # Updated to latest
     hooks:
       - id: black
-        args: ["--check", "."]
+        args: [--check, .]
 
   # 🧪 Layer 2: Static Analysis & Tests
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.13.0  # Updated to latest
+    rev: v1.13.0 # Updated to latest
     hooks:
       - id: mypy
-        args: ["--strict", "miles", "--ignore-missing-imports"]
+        args: [--strict, miles, --ignore-missing-imports]
         pass_filenames: false
         additional_dependencies:
           - types-requests>=2.31.0.20240406
@@ -29,19 +29,23 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
-      - id: check-yaml  # Validate YAML syntax
-      - id: check-json  # Validate JSON syntax
-      - id: check-toml  # Validate TOML syntax
-      - id: check-merge-conflict  # Check for merge conflict markers
-      - id: trailing-whitespace  # Remove trailing whitespace
-      - id: end-of-file-fixer  # Ensure files end with newline
+      - id: check-yaml # Validate YAML syntax
+      - id: check-json # Validate JSON syntax
+      - id: check-toml # Validate TOML syntax
+      - id: check-merge-conflict # Check for merge conflict markers
+      - id: trailing-whitespace # Remove trailing whitespace
+      - id: end-of-file-fixer # Ensure files end with newline
 
   # 🛡️ Security & Quality (run only on push)
   - repo: https://github.com/PyCQA/bandit
     rev: 1.7.10
     hooks:
       - id: bandit
-        args: ["-r", ".", "-i", "--exclude=tests/,test/,node_modules/,.venv/,venv/"]
+        args:
+          - -r
+          - .
+          - -i
+          - --exclude=tests/,test/,node_modules/,.venv/,venv/
         pass_filenames: false
         stages: [pre-push]
 
@@ -53,4 +57,4 @@ repos:
         entry: pytest -q --tb=short
         language: system
         pass_filenames: false
-        stages: [pre-push]  # Only run on push, not every commit
+        stages: [pre-push] # Only run on push, not every commit
