--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,39 +8,21 @@ on:
   workflow_dispatch:
 
 env:
-  PYTHON_VERSION: '3.12'
+  PYTHON_VERSION: "3.12"
 
 jobs:
   # 🚀 Layer 1: Formatting & Style (Fast feedback)
   format-and-lint:
-    name: 🚀 Format & Lint
+    name: 🚀 Code Quality (Trunk)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
 
-      - name: Set up Python
-        uses: actions/setup-python@v5.6.0
+      - name: Setup Trunk
+        uses: trunk-io/trunk-action@v1
         with:
-          python-version: ${{ env.PYTHON_VERSION }}
-          cache: 'pip'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install ruff black
-
-      - name: Run Ruff (format + lint)
-        run: |
-          echo "🔍 Running Ruff linting..."
-          ruff check . --output-format=github
-          echo "✨ Running Ruff formatting..."
-          ruff format --check .
-
-      - name: Run Black (backup formatter)
-        run: |
-          echo "⚫ Running Black formatting check..."
-          black --check --diff .
+          check-mode: all
 
   # 🧪 Layer 2: Static Analysis & Tests
   test-and-analyze:
@@ -49,7 +31,7 @@ jobs:
     needs: format-and-lint
     strategy:
       matrix:
-        python-version: ['3.11', '3.12']
+        python-version: ["3.11", "3.12"]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
@@ -58,7 +40,7 @@ jobs:
         uses: actions/setup-python@v5.6.0
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
+          cache: "pip"
 
       - name: Install dependencies
         run: |
@@ -105,7 +87,7 @@ jobs:
       - name: Run actionlint
         uses: raven-actions/actionlint@v2.0.0
         with:
-          files: '.github/workflows/*.yml'
+          files: ".github/workflows/*.yml"
 
   # 🐳 Build & Security Scan
   build-and-scan:
@@ -150,17 +132,17 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.31.0  # ✅ Fixed version
+        uses: aquasecurity/trivy-action@0.31.0 # ✅ Fixed version
         with:
           image-ref: ${{ steps.prep.outputs.image }}
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          format: "sarif"
+          output: "trivy-results.sarif"
 
       - name: Upload Trivy scan results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: "trivy-results.sarif"
 
   # 🚀 Build Natural Language Version
   build-natural-language:
