--- a/fly.toml
+++ b/fly.toml
@@ -7,25 +7,25 @@ app = 'miles'
 primary_region = 'iad'
 
 [build]
-  dockerfile = 'Dockerfile'
+dockerfile = 'Dockerfile'
 
 [env]
-  PYTHONUNBUFFERED = '1'
+PYTHONUNBUFFERED = '1'
 
 [http_service]
-  internal_port = 8080
-  force_https = false
+internal_port = 8080
+force_https = false
 
 [[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  path = "/"
-  port = 8080
-  protocol = "http"
-  timeout = "5s"
+grace_period = "30s"
+interval = "60s"
+method = "GET"
+path = "/health"
+port = 8080
+protocol = "http"
+timeout = "10s"
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
