--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  PYTHON_VERSION: "3.12"
+  PYTHON_VERSION: 3.12
 
 jobs:
   # 🚀 Layer 1: Formatting & Style (Fast feedback)
@@ -29,7 +29,7 @@ jobs:
     needs: format-and-lint
     strategy:
       matrix:
-        python-version: ["3.11", "3.12"]
+        python-version: [3.11, 3.12]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-python@v5.6.0
         with:
           python-version: ${{ matrix.python-version }}
-          cache: "pip"
+          cache: pip
 
       - name: Install dependencies
         run: |
@@ -85,7 +85,7 @@ jobs:
       - name: Run actionlint
         uses: raven-actions/actionlint@v2.0.0
         with:
-          files: ".github/workflows/*.yml"
+          files: .github/workflows/*.yml
 
   # 🐳 Build & Security Scan
   build-and-scan:
@@ -97,6 +97,16 @@ jobs:
       contents: read
       packages: write
       security-events: write
+      actions: none
+      checks: none
+      deployments: none
+      discussions: none
+      id-token: none
+      issues: none
+      pages: none
+      pull-requests: none
+      repository-projects: none
+      statuses: none
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
@@ -130,18 +140,17 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@0.30.0 # ✅ Using known working version
+        uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: ${{ steps.prep.outputs.image }}
-          format: "sarif"
-          output: "trivy-results.sarif"
+          format: sarif
+          output: trivy-results.sarif
 
       - name: Upload Trivy scan results to GitHub Security
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
-          sarif_file: "trivy-results.sarif"
-
+          sarif_file: trivy-results.sarif
   # 🚀 Build Natural Language Version
   build-natural-language:
     name: 🤖 Build Natural Language Bot
