--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'miles'
+app = 'miles-redis'
 primary_region = 'iad'
 
 [build]
