--- a/.github/workflows/deploy-fly.yml
+++ b/.github/workflows/deploy-fly.yml
@@ -25,11 +25,10 @@ jobs:
         run: |
           curl -L https://fly.io/install.sh | sh
           echo "$HOME/.fly/bin" >> "$GITHUB_PATH"
-      - name: "Destroy and recreate app"
+      - name: "Create app if needed"
         run: |
-          fly apps destroy miles-redis --yes || echo "App didn't exist"
-          fly apps create miles-redis --generate-name=false
-          fly ips allocate-v4 --app miles-redis
+          fly apps create miles-redis --generate-name=false || echo "App already exists"
+          fly ips allocate-v4 --app miles-redis || echo "IP already allocated"
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
       - name: "Push secrets to Fly"
